# pyrediff

./: CHANGELOG.md  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac
.github/workflows/: makefile.yml  pylint.yml
src/: ax_at_check_pattern.m4  ax_at_check_pyrediff.m4  check_pattern.awk  pyrediff  pyrediff.py
tests/: 01-simple.at  02-trivial.at  03-complex.at  04-trivial-bad.at  05-complex-diffs.at  05-diff-function.at  06-extract.at  07-quoting.at  08-example1.at  09-example2.at  10-example3.at  11-group-escape.at  12-example4.at  13-escape.at  13-escape.in  13-escape.re  14-group-unknown.at  15-alternation-bad.at  16-alternation-optional.at  17-version.at  Makefile.am  Makefile.in  atlocal.in  local.at  package.m4  quoting.at  testsuite  testsuite.at
